LPS-38138 - make form navigation horizontal for mobile and fix ckeditor overflow issues on webkit
LPS-38138 - Article structure toolbar should float left in mobile

LPS-38138 - Form navigator navigation should be above ckeditor on smaller screens

LPS-38189 - Remove uneeded white space above nav

LPS-38138 - Source formatting

LPS-38138 - more sf's

--- a/portal-web/docroot/html/portlet/journal/css/main.css
+++ b/portal-web/docroot/html/portlet/journal/css/main.css
@@ -72,8 +72,7 @@
 		color: #34404F;
 		display: block;
 		margin: 0 auto;
-		padding: 0.5em;
-		padding-bottom: 0;
+		padding: 0;
 	}
 
 	.article-structure-template-toolbar {
@@ -111,11 +110,19 @@
 		}
 	}
 
+	.article-translation-toolbar {
+		padding: 1em 0 0 0;
+	}
+
 	.journal-article-header-edit {
+		@include box-sizing(border-box);
+
 		background: #FCFCFC;
 		border: solid #DDD;
 		border-width: 1px 0;
 		margin: 0 0 1em;
+		padding: 1em;
+		width: 100%;
 	}
 
 	.subscribe-link {
@@ -522,9 +529,6 @@
 	}
 
 	.form-navigator {
-		position: relative;
-		z-index: 430;
-
 		.article-info {
 			font-weight: bold;
 			margin-bottom: 15px;
